--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "ptarsoly",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.1"
+    "cors": "^2.8.4",
+    "express": "^4.16.1",
+    "twitter": "^1.7.1"
   }
 }
